# raviole

./: BUILD.bazel  Kconfig.ext  build.config.raviole  build_raviole.sh  constants.bzl  device.bazelrc  raviole_defconfig  raviole_gki.fragment  vendor_boot_modules.raviole  vendor_dlkm.blocklist.raviole  vendor_ramdisk.modules.raviole
dts/: BUILD.bazel  Makefile  gs101-bluejay.dtsi  gs101-raviole-audio.dtsi  gs101-raviole-battery.dtsi  gs101-raviole-wcharger.dtsi  gs101-raviole.dtsi  gs101-slider-common.dtsi  gs101-whitefin-common.dtsi  gs101-whitefin-cp-s5200-sit-common.dtsi  gs101-whitefin2-common.dtsi
dts/google/: Makefile  gs101-bigw.dtsi  gs101-bluejay-audio.dtsi  gs101-bts.dtsi  gs101-common-bcl.dtsi  gs101-common-gps.dtsi  gs101-debug.dtsi  gs101-pm-domains.dtsi  gs101-ppmu.dtsi  gs101-raven-uwb.dtsi  gs101-raviole-audio.dtsi  gs101-raviole-charging.dtsi  gs101-s2mpu.dtsi  gs101-slider-audio.dtsi  gs101-slider-wcharger.dtsi  gs101-slider1-battery.dtsi  gs101-slider2-audio.dtsi  gs101-slider2-battery.dtsi  gs101-sysmmu.dtsi  gs101-whitefin2-wcharger.dtsi  gs101.dtsi
